## Process this file with automake to create Makefile.in

## Copyright (C) 2001, 2002, 2003  Free Software Foundation, Inc.

## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.

## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.

## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
## 02111-1307, USA.

SUBDIRS = tests

perllibdir = $(pkgvdatadir)/Automake
dist_perllib_DATA = \
  ChannelDefs.pm \
  Channels.pm \
  Condition.pm \
  Configure_ac.pm \
  DisjConditions.pm \
  General.pm \
  Location.pm \
  Struct.pm \
  Variable.pm \
  VarDef.pm \
  Version.pm \
  XFile.pm \
  Wrap.pm
